# Smoke-Sight

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: index.rst
docs/images/: generate.py
docs/tutorials/: 01_quickstart.ipynb  02_calibration.ipynb  03_uncertainty.ipynb  conf.py
examples/: run_demo.py
paper/: README.md  paper.bib  paper.tex
scenarios/: cal_panel_reference.yaml  synthetic_gaussian.yaml  synthetic_screen.yaml
smokesight/: __init__.py  _atmos.py  _geometry.py  _results.py  _sensor.py  _uncertainty.py  background.py  calibrate.py  cli.py  dynamics.py  exceptions.py  io.py  results.py  retrieve.py
tests/: conftest.py  test_background.py  test_calibrate.py  test_cli.py  test_dynamics.py  test_io.py  test_results.py  test_retrieve.py
