[metadata]
name = smokesight
version = 0.1.0
author = SmokeSight Contributors
license = Apache-2.0
description = Radiometric plume measurement from EO/IR video
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    imageio>=2.19
    pyyaml>=6.0
    scipy>=1.7
    netCDF4>=1.6
    xarray>=2022.3
    click>=8.0

[options.entry_points]
console_scripts =
    smokesight = smokesight.cli:main
